Fix overflowing quill content

--- a/client/src/app/styles/typography.scss
+++ b/client/src/app/styles/typography.scss
@@ -9,6 +9,8 @@
 // todo move somewhere else, not related to typography really anymore
 .quill-content{
 
+  overflow-wrap: break-word;
+
   p:first-of-type{
     margin-top: 0;
   }
